--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jose": "^6.1.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "nodemailer": "^7.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
@@ -35,6 +36,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.19",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
