--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "telegraf": "^4.16.3",
     "xlsx": "^0.18.5",
